--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+} */
+
+a.active hr {
+  display: block;
 }
