--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-/* * {
-  margin: 0;
+* {
+  /* margin: 0;
   padding: 0;
-  box-sizing: border-box;
-} */
+  box-sizing: border-box; */
+  font-family: 'Outfit', sans-serif;
+}
+
+.prata-regular {
+  font-family: "Prata", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 a.active hr {
   display: block;
